# ftrace-dev

./: .gitignore  Cargo.toml  LISENCE  build.rs  cbindgen.toml  readme.md
c_include/: bindings.h
src/: elf_reader.rs  ftrace.rs  lib.rs  manager.rs  utils.rs
src/ftrace/: elf_reader.rs  manager.rs  mod.rs
test_elf/: riscv64-nemu-interpreter
